--- a/gersis-angular/src/index.html
+++ b/gersis-angular/src/index.html
@@ -3,10 +3,10 @@
 <head>
     <base href="/admin">
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="assets/img/mktdigital.png">
+    <link rel="icon" type="image/png" href="assets/img/fabrica.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Marketing Digital</title>
+    <title>Gerenciador de Sistemas</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
